nav overflow fix

--- a/_css/main.css
+++ b/_css/main.css
@@ -172,7 +172,6 @@ h4, .h4 {
 	font-size: 1.6rem;
 	position: sticky;
 	top: 0;
-	overflow: hidden;
 }
 
 .site-header a {
